images and temp changes
added images provided and made some basic changes to the website to test some functionality

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,10 @@
   color: #007bff;
   font-size: 3rem;
 }
+.pdf-img {
+  width: 100%;
+  height: auto;
+  max-width: 800px;
+  margin-top: 20px;
+  border: 2px solid #ddd;
+}
