--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,65 @@
 .App {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 25vh;
+}
+
+.App-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #282c34;
+  min-height: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  z-index: 1000;
 }
 
 .App-header h1 {
   color: #007bff;
   font-size: 3rem;
+  margin: 0;  /* Remove any default margin */
+  padding: 10px;  /* Add padding for spacing */
+  text-align: center;
+  width: 100%;
 }
+
 .pdf-img {
   width: 100%;
   height: auto;
   max-width: 800px;
   margin-top: 20px;
   border: 2px solid #ddd;
+}
+
+.nav-links {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  justify-content: space-around; /* Distributes the links evenly */
+  width: 100%;  /* Ensures the navigation takes full width */
+  background-color: #007bff;
+  padding: 10px;
+  margin: 0;  /* Remove default margin */
+}
+
+.nav-links li {
+  flex-grow: 1;  /* Make the links fill the space evenly */
+  text-align: center;  /* Center-align the text in each item */
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.2rem;
+  display: block;  /* Makes the anchor tag fill the li */
+  padding: 10px 0;  /* Adds padding for better click area */
+}
+
+.nav-links a:hover {
+  text-decoration: underline;
 }
