--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,7 +1,9 @@
 /* src/Footer.css */
 .footer {
     background-color: #f8f9fa;  /* Light grey background */
-    padding: 15px;
+    padding: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
     text-align: center;
     width: 100%;
     bottom: 0;
