--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+body {
+  background-color: #FAF0E6;
+}
+
 .App {
   text-align: center;
-  margin-top: 25vh;
+  margin-top: 9vh;
 }
 
 .App-header {
@@ -8,61 +12,58 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #282c34;
-  min-height: 5vh;
+  background-color: #352F44;
+  min-height: 9vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;  /* Align items to the left */
+  padding: 0 20px;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #FAF0E6;
   z-index: 1000;
 }
 
-.App-header h1 {
-  color: #007bff;
-  font-size: 3rem;
-  margin: 0;  /* Remove any default margin */
-  padding: 20px;  /* Add padding for spacing */
-  text-align: center;
-  width: 100%;
+.App-header img {
+  height: 90px;
+  margin-right: 10px;
 }
 
-.pdf-img {
-  width: 100%;
-  height: auto;
-  max-width: 800px;
-  margin-top: 20px;
-  border: 2px solid #ddd;
+.App-header h1 {
+  color: #FAF0E6;
+  font-size: 2rem;
+  margin: 0;
+  padding: 0;
+  display: inline-flex;
+  align-items: center;
 }
 
 .nav-links {
   list-style-type: none;
-  padding: 10px 30px;
   display: flex;
-  justify-content: space-around;
-  width: 100%;
-  background-color: #007bff;
+  justify-content: flex-end;  /* Push the navigation links to the right */
+  flex-grow: 1;  /* Allow the nav links to take up the remaining space */
   margin: 0;
 }
 
 .nav-links li {
-  flex-grow: 1;  /* Make the links fill the space evenly */
-  text-align: center;  /* Center-align the text in each item */
+  text-align: center;
 }
 
 .nav-links a {
   text-decoration: none;
-  color: white;
+  color: #FAF0E6;
   font-size: 1.2rem;
-  display: block;  /* Makes the anchor tag fill the li */
-  padding: 10px 15px;  /* Adds padding for better click area */
+  padding: 10px 15px;
 }
 
 .nav-links a:hover {
   text-decoration: underline;
 }
+
 .header-title {
-  text-align: center; /* Centers the title within its container */
-  width: 100%; /* Ensures it spans the full width */
+  display: flex;
+  align-items: center;
+  text-align: left;
+  margin-left: 10px;  /* Add small left margin if needed */
 }
