--- a/src/App.css
+++ b/src/App.css
@@ -90,23 +90,13 @@ body {
   display: flex;
   justify-content: space-between;  /* Ensure space between the carousel and text block */
   align-items: center;  /* Vertically center the items */
-  padding: auto;
+  padding:  0 0 50px 0;
   width: 100%;
   background-image: linear-gradient(to right, #7AB2D3,#B9E5E8, #B9E5E8, #7AB2D3);
   overflow: hidden; /* Prevent overflow of the slanted part */
 }
 
-.carousel-section::after {
-  content: '';
-  position: absolute;
-  bottom: 0; /* Position it at the bottom */
-  left: 0;
-  width: 100%;
-  height: 300px; /* Height of the slant */
-  background: inherit; /* Use the same background as the section */
-  clip-path: polygon(0 100%, 50% 60%, 100% 100%); /* Create a slant using a polygon */
-  z-index: -1; /* Send the pseudo-element behind the content */
-}
+
 
 .carousel {
   flex: 1;  /* Let the carousel section take up more space */
@@ -129,4 +119,18 @@ body {
   font-size: 1.2rem;
   color: #333;
   margin-top: 10px;
+}
+.third-section {
+ position: relative;
+  width: 100%;
+  height: 500px; /* Adjust height as needed */
+  background-image: linear-gradient(to right, #735ab4,#d66ab6, #cf73db, #8e3e96);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  font-size: 2rem;
+  font-weight: bold;
+  clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%);
+  margin-top: -50px;
 }
