--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #FAF0E6;  /* Light grey background */
+  /*background-color: #FAF0E6;  /* Light grey background */
   padding: 0;
   margin-top: 15px;
   margin-bottom: 15px;
